--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
   "css.lint.unknownAtRules": "ignore",
-  "cSpell.words": ["clsx", "shadcn", "sonner", "tailwindcss"]
+  "cSpell.words": ["clsx", "lucide", "shadcn", "sonner", "tailwindcss"]
 }
