dashboard pages heading, dashboard main layout change with sidebar, main and top header, etc

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,11 @@
 {
   "css.lint.unknownAtRules": "ignore",
-  "cSpell.words": ["clsx", "lucide", "shadcn", "sonner", "tailwindcss"]
+  "cSpell.words": [
+    "clsx",
+    "hookform",
+    "lucide",
+    "shadcn",
+    "sonner",
+    "tailwindcss"
+  ]
 }
