data-table with tanstack table, pagination, row per page ui and functional (No Typescript yet)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,8 +4,10 @@
     "clsx",
     "hookform",
     "lucide",
+    "nuqs",
     "shadcn",
     "sonner",
-    "tailwindcss"
+    "tailwindcss",
+    "tanstack"
   ]
 }
