--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-table": "^8.15.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "input-otp": "^1.2.2",
     "lucide-react": "^0.363.0",
     "next": "14.1.4",
     "next-themes": "^0.3.0",
+    "nuqs": "^1.17.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
