--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "db:push": "npx drizzle-kit push:pg"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^0.8.2",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -30,6 +31,7 @@
     "input-otp": "^1.2.2",
     "lucide-react": "^0.363.0",
     "next": "14.1.4",
+    "next-auth": "^5.0.0-beta.16",
     "next-themes": "^0.3.0",
     "nuqs": "^1.17.1",
     "postgres": "^3.4.4",
