--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-fs-dashboard",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -24,34 +24,34 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-table": "^8.16.0",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "drizzle-orm": "^0.30.8",
+    "clsx": "^2.1.1",
+    "drizzle-orm": "^0.30.9",
     "input-otp": "^1.2.4",
-    "lucide-react": "^0.372.0",
-    "next": "14.2.2",
+    "lucide-react": "^0.373.0",
+    "next": "14.2.3",
     "next-auth": "^5.0.0-beta.16",
     "next-themes": "^0.3.0",
     "nuqs": "^1.17.1",
-    "postgres": "^3.4.4",
+    "postgres": "^3.3.5",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.5"
+    "zod": "^3.23.4"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.19",
-    "drizzle-kit": "^0.20.16",
+    "drizzle-kit": "^0.20.17",
     "eslint": "^8",
-    "eslint-config-next": "14.2.2",
+    "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.3",
     "typescript": "^5"
