--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "next-auth": "^5.0.0-beta.16",
     "next-themes": "^0.3.0",
     "nuqs": "^1.17.1",
+    "pg": "^8.11.5",
     "postgres": "^3.3.5",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
+    "react-icons": "^5.1.0",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
