--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "db:push": "npx drizzle-kit push:pg"
   },
   "dependencies": {
-    "@auth/drizzle-adapter": "^1.0.0",
+    "@auth/prisma-adapter": "^2.0.0",
     "@hookform/resolvers": "^3.3.4",
+    "@prisma/client": "^5.13.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-collapsible": "^1.0.3",
@@ -27,15 +28,12 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "drizzle-orm": "^0.30.9",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.373.0",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.16",
     "next-themes": "^0.3.0",
     "nuqs": "^1.17.1",
-    "pg": "^8.11.5",
-    "postgres": "^3.3.5",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
@@ -51,10 +49,10 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.19",
-    "drizzle-kit": "^0.20.17",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
+    "prisma": "^5.13.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5"
   }
