--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
+DATABASE_URL="postgresql://username:password@localhost:5432/database?schema=public"
+
 AUTH_SECRET=
-DATABASE_URL=
 
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
+
+RESEND_API_KEY=
